iverilog with rfloopback support

--- a/openocd_jtag_vpi.cfg
+++ b/openocd_jtag_vpi.cfg
@@ -14,7 +14,7 @@ target create $_TARGETNAME riscv -chain-position $_TARGETNAME
 riscv set_reset_timeout_sec 240
 riscv set_command_timeout_sec 240
 
-telnet_port 4444
+# telnet_port 4444
 
 puts "Before init"
 init
@@ -23,4 +23,4 @@ puts "after init"
 halt
 puts "after halt"
 
-echo "Ready for Remote Connections"
+# echo "Ready for Remote Connections"
